# MED-Task-Server

./: .gitignore  CMakeLists.txt  readme.md
include/: ExcelServer.h  ExcelThread.h  SynchronousExcelWrapper.h  Utility.h
src/: ExcelServer.cpp  ExcelThread.cpp  SynchronousExcelWrapper.cpp  Utility.cpp  main.cpp
